player: try preventing zoom in of the whole interfacethrough touch gestures in on mobile devices

--- a/player/src/player.css
+++ b/player/src/player.css
@@ -66,6 +66,11 @@
 
 }
 
+input, button {
+  touch-action: manipulation;
+}
+
+
 .main-container {
   color: var(--color-dark);
   border-color: var(--color-dark);
